# shuttle-examples

./: templates.toml
.github/workflows/: ci.yml
_scripts/: check-templates.rs  ci.sh  sync-all-template-repos.sh  sync-template-repo.sh
iad/todos/: Cargo.toml  README.md
iad/todos/migrations/: 0001_init.sql
iad/todos/src/: main.rs
iad/upload-manager/: Cargo.toml  README.md
iad/upload-manager/src/: main.rs
mcp/http-stream-mcp/: Cargo.toml
mcp/http-stream-mcp/src/: main.rs
